@@ -1,4 +1,4 @@
-#	$OpenBSD: dynamic-forward.sh,v 1.6 2011/05/20 06:32:30 dtucker Exp $
+#	$OpenBSD: dynamic-forward.sh,v 1.7 2011/05/31 02:01:58 dtucker Exp $
 #	Placed in the Public Domain.
 
 tid="dynamic forwarding"
@@ -21,21 +21,8 @@ start_sshd
 
 for p in 1 2; do
 	trace "start dynamic forwarding, fork to background"
-	rm -f $OBJ/remote_pid
-	${SSH} -$p -F $OBJ/ssh_config -D $FWDPORT -q somehost \
-		exec sh -c \'"echo \$\$ > $OBJ/remote_pid; exec sleep 444"\' &
-	client_pid=$!
-
-	# Wait for ssh to start
-	n=0
-	while test ! -f $OBJ/remote_pid; do
-		sleep 1
-		n=`expr $n + 1`
-		if test $n -gt 60; then
-			kill $client_pid
-			fail "Timed out waiting for client to connect"
-		fi
-	done
+	${SSH} -$p -F $OBJ/ssh_config -f -D $FWDPORT -q somehost \
+		exec sh -c \'"echo \$\$ > $OBJ/remote_pid; exec sleep 444"\'
 
 	for s in 4 5; do
 	    for h in 127.0.0.1 localhost; do
@@ -54,14 +41,7 @@ for p in 1 2; do
 		if [ $remote -gt 1 ]; then
 			kill -HUP $remote
 		fi
-		rm -f $OBJ/remote_pid
 	else
 		fail "no pid file: $OBJ/remote_pid"
 	fi
-
-	# Wait for listening ssh to terminate
-	wait
-
-	# Must allow time for connection tear-down
-	sleep 2
 done
